--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
 <body>
 
+    <header>
+        <div class="header">
+            <h1 class="header-text">Weather App</h1>
+        </div>
+    </header>
+
     <div class="card">
         <div class="search">
             <input type="text" placeholder="Enter location" spellcheck="false">
