Add a star background and changed alignment of weather card

--- a/index.html
+++ b/index.html
@@ -10,32 +10,32 @@
 
 <body>
 
-    <header>
         <div class="header">
             <h1 class="header-text">Weather App</h1>
         </div>
-    </header>
 
-    <div class="card">
-        <div class="search">
-            <input type="text" placeholder="Enter location" spellcheck="false">
-        </div>
-        <div class="weather">
-            <img src="" class="weather-icon">
-            <h1 class="temp">22c</h1>
-            <h2 class="city">New York</h2>
-            <div class="details">
-                <div class="col">
-                    <div>
-                        <p class="humidity">50%</p>
-                        <p>Humidity</p>
+    <div class="weather-card-background">
+        <div class="card">
+            <div class="search">
+                <input type="text" placeholder="Enter location" spellcheck="false">
+            </div>
+            <div class="weather">
+                <img src="" class="weather-icon">
+                <h1 class="temp">22c</h1>
+                <h2 class="city">New York</h2>
+                <div class="details">
+                    <div class="col">
+                        <div>
+                            <p class="humidity">50%</p>
+                            <p>Humidity</p>
+                        </div>
                     </div>
-                </div>
 
-                <div class="col">
-                    <div>
-                        <p class="wind">15km/h</p>
-                        <p>wind</p>
+                    <div class="col">
+                        <div>
+                            <p class="wind">15km/h</p>
+                            <p>wind</p>
+                        </div>
                     </div>
                 </div>
             </div>
