Change all the background to starry sky

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1 class="header-text">Weather App</h1>
         </div>
 
-    <div class="weather-card-background">
+    <div class="main-section">
         <div class="card">
             <div class="search">
                 <input type="text" placeholder="Enter location" spellcheck="false">
